--- a/src/dandiannotations/webapp/templates/success.html
+++ b/src/dandiannotations/webapp/templates/success.html
@@ -14,7 +14,7 @@
                     <h4 class="alert-heading">Resource Successfully Submitted!</h4>
                     <p>Your external resource annotation has been successfully submitted for community review.</p>
                     <hr>
-                    <p class="mb-0">The resource is now visible in the community submissions section and awaits moderator endorsement.</p>
+                    <p class="mb-0">The resource is now visible in the community submissions section and awaits moderator approval.</p>
                 </div>
                 
                 <div class="d-flex justify-content-between flex-wrap gap-2">
