--- a/src/dandiannotations/webapp/templates/success.html
+++ b/src/dandiannotations/webapp/templates/success.html
@@ -18,7 +18,7 @@
                 </div>
                 
                 <div class="d-flex justify-content-between flex-wrap gap-2">
-                    <a href="{{ url_for('index') }}" class="btn btn-primary">
+                    <a href="{{ url_for('submit_form') }}" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Submit Another Resource
                     </a>
                     {% if dandiset_id %}
