--- a/src/dandiannotations/webapp/templates/base.html
+++ b/src/dandiannotations/webapp/templates/base.html
@@ -39,11 +39,18 @@
                         </a>
                     </li>
                     {% if is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('moderate') }}">
-                            <i class="fas fa-gavel"></i> Moderate
-                        </a>
-                    </li>
+                        {% if is_moderator %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('moderate') }}">
+                                <i class="fas fa-gavel"></i> Moderate
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('my_submissions') }}">
+                                <i class="fas fa-list"></i> My Submissions
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
                 
@@ -51,10 +58,18 @@
                     {% if is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-user-shield"></i> {{ current_user.name }}
+                                {% if is_moderator %}
+                                    <i class="fas fa-user-shield"></i> {{ current_user.name }}
+                                {% else %}
+                                    <i class="fas fa-user"></i> {{ current_user.name }}
+                                {% endif %}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><h6 class="dropdown-header">Moderator</h6></li>
+                                {% if is_moderator %}
+                                    <li><h6 class="dropdown-header">Moderator</h6></li>
+                                {% else %}
+                                    <li><h6 class="dropdown-header">User</h6></li>
+                                {% endif %}
                                 <li><span class="dropdown-item-text">{{ current_user.email }}</span></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{{ url_for('logout') }}" onclick="if(window.dandiClearFormDataOnLogout) window.dandiClearFormDataOnLogout();">
@@ -66,6 +81,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('login') }}">
                                 <i class="fas fa-sign-in-alt"></i> Login
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('register') }}">
+                                <i class="fas fa-user-plus"></i> Register
                             </a>
                         </li>
                     {% endif %}
