--- a/src/dandiannotations/webapp/templates/login.html
+++ b/src/dandiannotations/webapp/templates/login.html
@@ -61,6 +61,10 @@
                     <i class="fas fa-info-circle"></i>
                     Only authorized moderators can access endorsement features
                 </small>
+                <hr>
+                <p class="mb-0">
+                    <small>Don't have an account? <a href="{{ url_for('register') }}">Register as a user</a></small>
+                </p>
             </div>
         </div>
         
