--- a/src/dandiannotations/webapp/templates/success.html
+++ b/src/dandiannotations/webapp/templates/success.html
@@ -12,9 +12,9 @@
             <div class="card-body">
                 <div class="alert alert-success">
                     <h4 class="alert-heading">Resource Successfully Submitted!</h4>
-                    <p>Your external resource annotation has been successfully submitted for community review.</p>
+                    <p>Your external resource annotation has been successfully submitted for review.</p>
                     <hr>
-                    <p class="mb-0">The resource is now visible in the community submissions section and awaits moderator approval.</p>
+                    <p class="mb-0">Your submission will be reviewed by our moderators and will appear publicly once approved. Thank you for contributing to the DANDI community!</p>
                 </div>
                 
                 <div class="d-flex justify-content-between flex-wrap gap-2">
@@ -26,9 +26,11 @@
                         <i class="fas fa-eye"></i> View {{ dandiset_id }} Resources
                     </a>
                     {% endif %}
+                    {% if is_authenticated and is_moderator %}
                     <a href="{{ url_for('moderate') }}" class="btn btn-outline-secondary">
                         <i class="fas fa-gavel"></i> Moderation Interface
                     </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
